add_executable(thread_safe_queue thread_safe_queue.cc)
#add_executable(async_future async_future.cc)
add_executable(async_paramers async_paramers.cc)
add_executable(packaged_task packaged_task.cc)
#add_executable(pqtimer timer/pqtimer/timerqueuebase.h timer/pqtimer/timerqueuebase.cc)
add_executable(clock_timer timer/Clock/timer.cc timer/Clock/clock.cc timer/Clock/main.cc)
add_executable(wait_for wait_for.cc)
add_executable(sleep_for sleep_for.cc)
add_executable(quick_sort quick_sort.cc)