add_executable(spinlock spinlock.cc)
add_executable(atomic_product atomic_product.cc)
add_executable(total_order total_order.cc)
add_executable(no_order no_order.cc)
add_executable(acquire_release acquire_release.cc)
add_executable(acquire_release_memory acquire_release_memory.cc)
add_executable(acquire_sync acquire_sync.cc)
add_executable(consume_sync consume_sync.cc)
add_executable(atomic_read_data atomic_read_data.cc)
add_executable(thread_fence thread_fence.cc)
add_executable(atomic_unatomic atomic_unatomic.cc)